<resources>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="product_name">Product name</string>
    <string name="name">Name</string>
    <string name="expiry_date">Expiry date</string>
    <string name="change_date">Change date</string>
    <string name="unit">Unit</string>
    <string name="product_count">Product count</string>
    <string name="count">Count</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="app_name">PrzeTerminarz</string>
    <string name="count_with_unit" translatable="false">%1$d %2$s</string>
    <string name="filter">Filter</string>
    <string name="type_in_name_of_an_product">Type in name of an product!</string>
    <string name="choose_unit_of_an_product">Choose unit of an product!</string>
    <string name="choose_expiry_date_of_an_product">Choose expiry date of an product!</string>
    <string name="expired">Expired</string>
    <string name="food">Food</string>
    <string name="medicine">Medicine</string>
    <string name="cosmetic">Cosmetic</string>
    <string name="usable">Usable</string>
    <string name="this_item_has_expired_and_can_t_be_edited">This item has expired and can\'t be edited!</string>
    <string name="you_ve_deleted">You\'ve deleted %1$s!</string>
    <string name="do_you_for_sure_want_to_delete_this_element">Do you for sure want to delete this element?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>